Update some deps